--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,7 @@ a {
 .pac-container {
   z-index: 5000 !important;
 }
+
+.gradient-hero-affiliate {
+  clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%);
+}
